<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot320_analysis</name>
  <version>0.0.0</version>
  <description>Tools to analyze the kinematics and singularities of the myCobot320 robot using symbolic and numeric methods</description>
  <maintainer email="tdeaguirre@fi.uba.ar">tomasdea</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>mycobot320_description</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-sympy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
